--- a/Nop.Plugin.SMS.Clickatell/Views/Configure.cshtml
+++ b/Nop.Plugin.SMS.Clickatell/Views/Configure.cshtml
@@ -67,14 +67,14 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-md-9 col-md-offset-3">
+                    <div class="col-md-9 offset-md-3">
                         <input type="submit" name="save" class="btn btn-primary" value="@T("Admin.Common.Save")" />
                     </div>
                 </div>
             </div>
         </div>
         <div class="card card-default">
-            <div class="card-heading">
+            <div class="card-header">
                 @T("Plugins.Sms.Clickatell.SendTest.Hint")
             </div>
             <div class="card-body">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <div class="col-md-9 col-md-offset-3">
+                    <div class="col-md-9 offset-md-3">
                         <input type="submit" name="test" class="btn btn-primary" value="@T("Plugins.Sms.Clickatell.SendTest")" />
                     </div>
                 </div>
